--- a/book.bib
+++ b/book.bib
@@ -1,4 +1,5 @@
 % Encoding: UTF-8
+
 @Book{xie2015,
   title = {Dynamic Documents with {R} and knitr},
   author = {Yihui Xie},
@@ -15,6 +16,13 @@
   publisher = {Oxford University Press},
   title     = {The Cointegrated VAR Model: Methodology and Applications},
   year      = {2006},
+}
+
+@Book{Pfaff2008Analysis,
+  author    = {Pfaff, Bernhard},
+  publisher = {Springer Science & Business Media},
+  title     = {Analysis of Integrated and Cointegrated Time Series with R},
+  year      = {2008},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
