--- a/book.bib
+++ b/book.bib
@@ -25,4 +25,11 @@
   year      = {2008},
 }
 
+@Book{Johansen1995Likelihood,
+  author    = {Johansen, S{\o}ren},
+  publisher = {Oxford University Press},
+  title     = {Likelihood-based inference in cointegrated vector autoregressive models},
+  year      = {1995},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
