Added Johansen and Juselius 1992

--- a/book.bib
+++ b/book.bib
@@ -32,4 +32,14 @@
   year      = {1995},
 }
 
+@Article{JohansenJuselius1992Testing,
+  author  = {S{\o}ren Johansen and Katarina Juselius},
+  journal = {Journal of Econometrics},
+  title   = {Testing structural hypotheses in a multivariate cointegration analysis of the PPP and the UIP for UK},
+  year    = {1992},
+  number  = {1},
+  pages   = {211 - 244},
+  volume  = {53},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
